API Route and documentation done
